Added support for checking the references.

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -21,6 +21,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Femiani's preferred additional packages
 
+\usepackage{refcheck}
 \usepackage{pgfgantt}
 \usepackage{enumitem}
 \usepackage{booktabs}
